# microsynth

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
haskell/: .gitignore  COEXISTENCE.md  DESIGN.md  README.md  bench.sh  demo.synth  gen_rust_poly.sh  microsynth.cabal
haskell/app/: Main.hs
haskell/src/: Microsynth.hs
haskell/src/Microsynth/: Buffer.hs  Context.hs  Demo.hs  Engine.hs  Graph.hs  Node.hs  Numerics.hs  Signal.hs  SynthDef.hs  Types.hs  UGen.hs  Wav.hs
haskell/src/Microsynth/SynthDef/: IR.hs  Introspect.hs
haskell/src/Microsynth/UGen/: Common.hs  Envelope.hs  Filter.hs  Math.hs  Oscillator.hs  Spec.hs
haskell/test/: Spec.hs
src/: buffer.rs  context.rs  engine.rs  graph.rs  lib.rs  musical_time.rs  node.rs  routing.rs  sample.rs  scheduler.rs  synthdef.rs  tuning.rs  ugens.rs  web.rs
src/dsl/: ast.rs  compiler.rs  lexer.rs  mod.rs  parser.rs
src/ir/: mod.rs  render.rs  serialize.rs
src/spectral/: complex.rs  fft.rs  griffin_lim.rs  mod.rs  stft.rs  window.rs
src/ugens/: bitcrush.rs  bl_oscillators.rs  bus.rs  delay.rs  delayline.rs  distortion.rs  envelopes.rs  filters.rs  fm.rs  freqshift.rs  lfo.rs  macros.rs  math.rs  mod.rs  modulation.rs  noise.rs  oscillators.rs  physical.rs  playbuf.rs  rng.rs  spectral.rs  stereo.rs  utility.rs  wavetable.rs
tests/: categories.rs  cli.rs  core_engine.rs  dsl.rs  ir.rs  musical_primitives.rs  routing.rs  sequencer_features.rs  spectral.rs  ugens.rs
tests/common/: mod.rs
web/: build.sh  index.html  processor.js
