cabal-version:      2.4
name:               microsynth
version:            0.1.0.0
synopsis:           A Haskell port (scaffold) of the microsynth audio engine
description:
  An idiomatic-Haskell proof-of-concept for the Rust `microsynth` engine.
  SynthDefs are built as an embedded DSL (a `Signal` graph with `Num`/
  `Fractional` instances), and rendered through a strict `ST` + unboxed
  mutable-vector render path. See the Rust project's PLAN.md and the
  design doc for the full mapping.
license:            MIT
author:             microsynth
build-type:         Simple

common warnings
  ghc-options: -Wall -O2

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base       >=4.14 && <5
    , vector
    , containers
    , mtl
    , bytestring
    , aeson
    , vector-th-unbox
  -- The public API: the umbrella, the vocabulary types the EDSL is written in,
  -- and the graph/IR/introspection surface an external consumer targets.
  exposed-modules:
      Microsynth
      Microsynth.Types
      Microsynth.Context
      Microsynth.Signal
      Microsynth.SynthDef
      Microsynth.SynthDef.Introspect
      Microsynth.SynthDef.IR
      Microsynth.UGen.Spec
      Microsynth.Engine
      Microsynth.Wav
      Microsynth.Demo
  -- The internal engine: the render path (buffers, nodes, DSP kernels) and the
  -- graph builder. Reachable only through the exposed API above, so these stay
  -- free to change without breaking consumers.
  other-modules:
      Microsynth.Buffer
      Microsynth.Node
      Microsynth.Numerics
      Microsynth.Graph
      Microsynth.UGen
      Microsynth.UGen.Common
      Microsynth.UGen.Math
      Microsynth.UGen.Oscillator
      Microsynth.UGen.Filter
      Microsynth.UGen.Envelope

executable microsynth-cli
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -rtsopts
  build-depends:
      base
    , microsynth
    , containers
    , optparse-applicative

test-suite spec
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:
      base
    , microsynth
    , containers
    , vector
    , hspec
    , QuickCheck
